# security-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
assets/: ui.js
docs/: RATE_LIMITS.md
src/: auth.rs  cache.rs  config.rs  db.rs  main.rs  mcp.rs  oauth.rs  rate_limit.rs  types.rs  ui.rs  validation.rs
src/modules/: mod.rs  parsers.rs  registry.rs
src/modules/workflows/: common.rs  high_level.rs  local.rs  mod.rs  sources_cve.rs  sources_deps.rs  sources_infra.rs  sources_new.rs  sources_threat.rs
tests/: e2e.rs
