[package]
name = "security-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros", "json", "query", "form"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
dotenvy = "0.15.7"
http = "1.3.1"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
subtle = "2.6.1"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["compression-br", "compression-gzip", "limit", "trace", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
urlencoding = "2.1.3"

[dev-dependencies]
hyper = "1.7.0"
